# mermaduckle

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build_results.txt  check.txt  check_results.txt  docker-compose.yml  fly.toml
.github/workflows/: ci.yml  fly-deploy.yml  fly-retire-legacy-volume.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/governance/: Cargo.toml
crates/governance/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  main.rs  models.rs  scheduler.rs
crates/server/src/handlers/: agents.rs  approvals.rs  architect.rs  audit.rs  auth.rs  dashboard.rs  health.rs  mod.rs  recovery.rs  reporting.rs  settings.rs  webhook.rs  workflows.rs
crates/server/static/: app.js  console_snippet.js  index.html  style.css  workflow-canvas.js
crates/server/static/app/: app-beta.css  index.html
crates/server/static/demo/: demo.css  demo.js  index.html
crates/server/static/marketing/: docs.html  index.html  index.html.bak  marketing.css  marketing.js
deploy/: Dockerfile.fly  deploy.sh  mermaduckle.service
docs/deploy/: fly.md  mermaduckle.service
tools/: commit_and_push.ps1  create_api_key.py  deploy_fly.ps1  start_dev_run.ps1
