[package]
name = "mermaduckle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for the Mermaduckle AI Agent Orchestration Platform"

[[bin]]
name = "mermaduckle"
path = "src/main.rs"

[dependencies]
mermaduckle-sdk = { path = "../sdk" }
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.17"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
