[package]
name = "mermaduckle-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent orchestration engine for Mermaduckle"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
futures = "0.3"
