[package]
name = "mermaduckle-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK for the Mermaduckle API"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
