[package]
name = "mermaduckle-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mermaduckle web server — API + HTML frontend"

[[bin]]
name = "mermaduckle-server"
path = "src/main.rs"

[dependencies]
mermaduckle-engine = { path = "../engine" }
mermaduckle-governance = { path = "../governance" }
actix-web = "4"
actix-files = "0.6"
actix-web-httpauth = "0.8"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.14" }
postgres-native-tls = "0.5"
native-tls = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
argon2 = "0.4"
rand = "0.8"
